--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -124,7 +124,8 @@ body #content {
 
 					li {
 						margin: 3px 0;
-						font-size: 1em;
+						// font-size: 1em;
+						font-size: 1rem;
 
 						&.tall-margin {
 							margin: 10px 0;
