--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -52,7 +52,9 @@
 @import "sections/header";
 @import "sections/footer";
 @import "sections/hero";
+@import "sections/hero-home";
 @import "sections/content-body";
+@import "sections/aside";
 @import "sections/posting";
 
-@import "sections/hero-home";
+
