--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -74,6 +74,7 @@
 // LAYOUT
 $mobile-width: 420px;
 $tablet-width: 640px;
+$tablet-wide-width: 760px;
 $laptop-width: 920px;
 $desktop-width: 1024px;
 $wide-width: 1200px;
@@ -104,7 +105,7 @@ $h6: 0.6em;
 $col-white: #fff;
 $col-black: #202020;
 $col-grey: #dfdfdf;
-$col-grey-l: lighten( $col-grey, 10% );
+$col-grey-l: lighten( $col-grey, 5% );
 $col-grey-d: darken( $col-grey, 10% );
 $col-grey-d1: #afafaf;
 $col-grey-d2: #9d9d9d;
