--- a/app/scss/sections/_content-body.scss
+++ b/app/scss/sections/_content-body.scss
@@ -9,6 +9,7 @@
 body #content {
 	.content-body {
 		color: $col-grey-d3;
+		background: lighten($col-grey, 5%);
 
 		a {
 			color: $col-black;
@@ -31,29 +32,40 @@ body #content {
 				top: 1px;
 				right: 0;
 			}
-
-			&:active {
-				opacity: .5;
-			}
 		}
 
 		.section {
-			padding-top: 80px;
-			padding-bottom: 80px;
-			border-top: 1px solid lighten($col-grey, 5%); //REMOVE??
+			background: $col-white;
+			padding-top: 60px;
+			padding-bottom: 0;
+			border: 8px solid lighten($col-grey, 5%);
+			border-bottom: 10px solid lighten($col-grey, 5%);
+			border-top: none;
 
 			&:first-child {
-				border: none; //REMOVE??
+				border-top: 10px solid lighten($col-grey, 5%);
 			}
 
 			&:last-child {
-				border: none; //REMOVE??
+				border: none;
+				border-top: 1px solid lighten($col-grey, 5%);
 				padding-bottom: 80px;
 			}
 
 			@include breakpoint($tablet-width) {
+				padding-top: 70px;
+			}
+
+			@include breakpoint($tablet-wide-width) {
+				padding-top: 80px;
+				padding-bottom: 80px;
+
+				border: none;
+				border-top: 1px solid lighten($col-grey, 5%);
+
 				&:first-child {
 					padding-top: 90px;
+					border: none;
 				}
 			}
 		}
@@ -62,13 +74,27 @@ body #content {
 			@include span(9);
 			text-align: center;
 
-			@include breakpoint($tablet-width) {
+			@include breakpoint($tablet-wide-width) {
 				@include span(6);
 				text-align: left;
 			}
 
 			&.no-sidebar {
 				@include span(9);
+
+				padding-bottom: 30px;
+
+				@include breakpoint($tablet-width) {
+					padding-bottom: 50px;
+				}
+
+				@include breakpoint($tablet-wide-width) {
+					padding-bottom: 0;
+				}
+
+				&.posting {
+					padding-bottom: 0;
+				}
 			}
 		}
 
@@ -76,7 +102,7 @@ body #content {
 			@include span(9);
 			text-align: center;
 
-			@include breakpoint($tablet-width) {
+			@include breakpoint($tablet-wide-width) {
 				@include span(3);
 				text-align: left;
 			}
@@ -84,12 +110,29 @@ body #content {
 
 		h3 {
 			display: inline-block;
+			position: relative;
 			padding-bottom: 15px;
-			margin-bottom: 25px;
+			margin-bottom: 30px;
 
-			@include breakpoint($tablet-width) {
+			a.more-link.sprite-link {
+				display: none;
+				position: absolute;
+				background-position: -40px -500px;
+				bottom: 18px;
+				right: 5px;
+				opacity: .15;
+
+				&:active {
+					opacity: 1;
+				}
+
+				@include breakpoint($tablet-wide-width) {
+					display: block;
+				}
+			}
+
+			@include breakpoint($tablet-wide-width) {
 				display: block;
-				margin-bottom: 15px;
 			}
 		}
 
@@ -100,8 +143,102 @@ body #content {
 				@include span(9);
 			}
 
-			a, a:visited {
+			a {
 				color: $col-white;
+
+				&:visited {
+					color: $col-white;
+				}
+
+				&:active {
+					color: $col-black;
+				}
+			}
+
+			a.black {
+				color: $col-black;
+
+				&:visited {
+					color: $col-black;
+				}
+
+				&:active {
+					color: $col-white;
+				}
+			}
+
+			a.text-btn.black {
+				color: $col-black;
+
+				&:visited {
+					color: $col-black;
+				}
+
+				&:active {
+					color: $col-white;
+				}
+
+				.icon {
+					position: absolute;
+					top: 1px;
+					right: 0;
+				}
+			}
+		}
+	}
+}
+
+.noTouch body #content {
+	.content-body {
+		a, a.text-btn {
+			&:active {
+				opacity: .5;
+			}
+		}
+
+		h3 {
+			a.more-link {
+				&:hover {
+					opacity: 1;
+				}
+
+				&:active {
+					opacity: .5;
+				}
+			}
+		}
+
+		.media {
+			a {
+				&:hover {
+					color: $col-black;
+				}
+
+				&.black:hover {
+					color: $col-white;
+				}
+
+				&:active {
+					opacity: .5;
+				}
+			}
+
+			a.text-btn {
+				&:hover {
+					color: $col-black;
+				}
+
+				&.black {
+					&:hover {
+						.icon {
+							position: absolute;
+							top: 1px;
+							right: 0;
+						}
+
+						color: $col-white;
+					}
+				}
 			}
 		}
 	}
