--- a/app/scss/sections/_aside.scss
+++ b/app/scss/sections/_aside.scss
@@ -21,20 +21,38 @@ body #content .content-body {
 			margin-bottom: 0;
 		}
 
-		.boxed {
-			margin-bottom: 10px;
-			// border: 1px solid $col-grey-d;
-			border: 1px solid $col-grey;
-			font-size: .86rem;
-			line-height: 1.5rem;
-
+		.opened {
+			padding-top: 30px;
+			padding-bottom: 40px;
+			
 			@include breakpoint($tablet-width) {
-				margin-bottom: 10px;
+				padding-bottom: 50px;
+			}
+
+			@include breakpoint($tablet-wide-width) {
+				&:first-child {
+					padding-top: 0;
+				}
+
+				padding-bottom: 40px;
+			}
+		}
+
+		.boxed {
+			margin-bottom: 30px;
+			
+			@include breakpoint($tablet-wide-width) {
+				margin-bottom: 20px;
 			}
 
 			&:last-child {
 				margin-bottom: 0;
 			}
+
+			border: 1px solid $col-grey;
+			// border: 1px solid $col-grey-d;
+			font-size: .86rem;
+			line-height: 1.5rem;
 
 			.padder {
 				padding: 35px 20px 15px;
@@ -93,7 +111,9 @@ body #content .content-body {
 
 					.date {
 						@include span(6 of 18 inside no-gutters);
-						font-weight: 700;
+
+						color: darken($col-grey-d2, 15%);
+						font-weight: 800;
 
 						@include breakpoint($tablet-wide-width) {
 							@include span(7 of 18 inside no-gutters);
@@ -106,7 +126,6 @@ body #content .content-body {
 
 					.txt {
 						@include span(12 of 18 inside no-gutters);
-						color: $col-grey-d3;
 						text-align: left;
 
 						@include breakpoint($tablet-wide-width) {
@@ -151,10 +170,100 @@ body #content .content-body {
 			}
 
 			&.calendar {
-				h4 {
-					color: $col-white;
-					text-align: center;
-					margin: 20px auto;
+				background: $col-grey;
+				border: none;
+
+				table {
+					width: 100%;
+					border: none;
+					padding: 0;
+					background: $col-grey-l;
+
+					@include breakpoint($tablet-wide-width) {
+						// width: 100.3%;
+					}
+					
+					td {
+						color: $col-grey-d2;
+						font-weight: 700;
+						text-align: center;
+						// border: 1px solid darken($col-grey, 5%);
+						border: 1px solid $col-grey;
+
+						a, span {
+							display: block;
+							padding: 8px 0;
+
+							@include breakpoint($tablet-width) {
+								padding: 24px 0;
+							}
+
+							@include breakpoint($tablet-wide-width) {
+								padding: 8px 0;
+							}
+						}
+					}
+
+					tr.label {
+						background: $col-white;
+
+						td {
+							color: $col-grey-d3;
+							// border: 1px solid darken($col-grey, 5%);
+							border: 1px solid $col-grey;
+							padding: 4px 0;
+
+							@include breakpoint($tablet-width) {
+								padding: 12px 0;
+							}
+
+							@include breakpoint($tablet-wide-width) {
+								padding: 4px 0;
+							}
+						}
+					}
+
+					h5 {
+						background: $col-white;
+						text-align: center;
+						padding: 20px 0 18px;
+
+						@include breakpoint($tablet-wide-width) {
+							padding: 10px 0;
+						}
+
+						.m-left {
+							margin: 0;
+							margin-right: 25px;
+						}
+
+						.m-right {
+							margin: 0;
+							margin-left: 25px;
+						}
+
+						a {
+							display: inline-block;
+							padding: 3px 5px;
+						}
+					}
+				}
+			}
+
+			.group-finder {
+				background: $col-white;
+				height: 130px;
+				margin-bottom: 20px;
+				overflow: hidden;
+				overflow-y: scroll;
+
+				ul {
+					padding: 5px 20px;
+
+					li a {
+						display: block;
+						padding: 5px 0;
+					}
 				}
 			}
 		}
@@ -164,6 +273,39 @@ body #content .content-body {
 
 			@include breakpoint($tablet-wide-width) {
 				margin-bottom: 30px;
+			}
+		}
+
+		.sidebar-gallery {
+			p {
+				text-align: center;
+			}
+
+			.thumbnail {
+				max-width: 320px;
+				margin: 20px auto;
+				font-size: 0;
+				overflow: hidden;
+
+
+				@include breakpoint($tablet-wide-width) {
+					margin: 0 auto 10px;
+				}
+
+				img {
+					@include trans(.25s, opacity);
+					width: 100%;
+				}
+			}
+
+			@include breakpoint($tablet-wide-width) {
+				p {
+					margin-top: 8px;
+				}
+
+				h3 {
+					margin-bottom: 8px;
+				}
 			}
 		}
 	}
@@ -185,7 +327,7 @@ body #content .content-body {
 			}
 
 			a.list-item {
-				&:hover .txt {
+				&:hover .date {
 					color: $col-black;
 				}
 			}
