--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -45,7 +45,7 @@ body {
 
 h2, h3, h4, h5, h6 {
 	font-weight: 400;
-	line-height: 1em;
+	line-height: 1.2em;
 	margin: 0;
 }
 
@@ -99,6 +99,10 @@ span.sm-txt {
 	li {
 		list-style: none;
 	}
+}
+
+.fa {
+	font-family: FontAwesome !important;
 }
 
 .add-paddingTop {
