--- a/app/scss/sections/_content-body.scss
+++ b/app/scss/sections/_content-body.scss
@@ -58,7 +58,8 @@ body #content {
 
 			@include breakpoint($tablet-wide-width) {
 				padding-top: 80px;
-				padding-bottom: 80px;
+				// padding-bottom: 80px;
+				padding-bottom: 20px;
 
 				border: none;
 				border-top: 1px solid lighten($col-grey, 5%);
@@ -75,26 +76,26 @@ body #content {
 			text-align: center;
 
 			@include breakpoint($tablet-wide-width) {
-				@include span(6);
+				@include span(11 of 18);
 				text-align: left;
+			}
+
+			@include breakpoint($laptop-width) {
+				@include span(6);
 			}
 
 			&.no-sidebar {
 				@include span(9);
 
-				padding-bottom: 30px;
-
-				@include breakpoint($tablet-width) {
-					padding-bottom: 50px;
-				}
-
-				@include breakpoint($tablet-wide-width) {
-					padding-bottom: 0;
-				}
-
 				&.posting {
 					padding-bottom: 0;
 				}
+			}
+
+			padding-bottom: 30px;
+
+			@include breakpoint($tablet-wide-width) {
+				padding-bottom: 50px;
 			}
 		}
 
@@ -103,8 +104,12 @@ body #content {
 			text-align: center;
 
 			@include breakpoint($tablet-wide-width) {
-				@include span(3);
+				@include span(7 of 18);
 				text-align: left;
+			}
+
+			@include breakpoint($laptop-width) {
+				@include span(3);
 			}
 		}
 
@@ -139,8 +144,64 @@ body #content {
 		.media {
 			color: $col-white;
 
-			.main-body {
-				@include span(9);
+			h3 {
+				border: none;
+
+				&.border-on {
+					border-bottom: 4px solid $col-white;
+				}
+
+				a.more-link.sprite-link {
+					opacity: .4;
+					background-position: 0 -500px;
+
+					&:active {
+						background-position: -40px -500px;
+					}
+				}
+			}
+
+			h4.quote {
+				position: relative;
+				width: 90%;
+				margin: 0 auto;
+				font-family: $font-serif;
+				font-weight: 700;
+				text-align: center;
+				letter-spacing: 1pt;
+				line-height: 1.4em;
+
+				span.author {
+					display: block;
+					width: 50%;
+					margin: 10px auto 0;
+					padding: 0;
+					font-family: $font-sans;
+					font-weight: 700;
+					text-align: center;
+					font-size: .86rem;
+					line-height: 1.5rem;
+				}
+
+				@include breakpoint($tablet-wide-width) {
+					width: 80%;
+					margin: 0;
+
+					span.author {
+						padding-left: 50px;
+					}
+				}
+			}
+
+			.main-body, .side-body {
+				// @include span(9);
+				padding-left: 10px;
+				padding-right: 10px;
+
+				@include breakpoint($tablet-wide-width) {
+					padding-left: 0;
+					padding-right: 0;
+				}
 			}
 
 			a {
@@ -182,6 +243,134 @@ body #content {
 					position: absolute;
 					top: 1px;
 					right: 0;
+				}
+			}
+		}
+	}
+}
+
+body.stpaul-stPaulHome #content .content-body .section.media {
+	background: $col-stPaulHome url("../images/stpaulHome-bottom-bg.png") no-repeat bottom right;
+	background-size: cover;
+
+	@include breakpoint($tablet-wide-width) {
+		background-position: bottom center;
+		background-size: auto;
+	}
+}
+
+body #content .content-body .main-body {
+	&.two-column, &.three-column {
+		.row {
+			display: block;
+			position: relative;
+			float: left;
+			margin-bottom: 20px;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+
+			@include breakpoint($tablet-width) {
+				margin-bottom: 40px;
+			}
+		}
+
+		.column {
+			@include span(9);
+			text-align: center;
+			margin-bottom: 40px;
+
+			&:last-child {
+				margin-bottom: 20px;
+			}
+
+			@include breakpoint($tablet-width) {
+				text-align: left;
+				margin-bottom: 0;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+
+			.thumbnail {
+				max-width: 320px;
+				margin: 20px auto;
+				font-size: 0;
+				overflow: hidden;
+
+				@include breakpoint($tablet-wide-width) {
+					margin: 0 auto 15px;
+				}
+
+				img {
+					@include trans(.25s, opacity);
+					width: 100%;
+				}
+			}
+		}
+
+		h5 {
+			color: $col-grey-d3;
+			padding-bottom: 14px;
+			margin: 0;
+			border-bottom: 1px solid $col-grey-d1;
+		}
+
+		@include breakpoint($tablet-width) {
+			h5 {
+				margin-right: 8px;
+				padding-bottom: 8px;
+			}
+
+			p {
+				margin-top: 8px;
+			}
+		}
+
+		@include breakpoint($tablet-wide-width) {
+			h3 {
+				margin-bottom: 8px;
+			}
+		}
+	}
+
+	&.two-column .column {
+		@include breakpoint($tablet-width) {
+			@include span(9 of 18);
+		}
+	}
+
+	&.three-column {
+		.row {
+			margin-bottom: 0;
+
+			&:last-child {
+				margin-bottom: 10px;
+			}
+
+			@include breakpoint($tablet-wide-width) {
+				margin-bottom: 10px;
+			}
+		}
+
+		.column {
+			margin-bottom: 20px;
+
+			p {
+				line-height: 1.4em;
+			}
+
+			@include breakpoint($tablet-width) {
+				@include span(8 of 24);
+
+				margin-bottom: 0;
+			}
+
+			@include breakpoint($tablet-wide-width) {
+				.thumbnail {
+					margin: 0 0 8px;
 				}
 			}
 		}
